[project]
name = "dagster_tutorial"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "adbc-driver-manager>=1.8.0",
    "cbsodata>=1.3.5",
    "dagster==1.11.15",
    "dagster-duckdb>=0.27.15",
    "duckdb>=1.4.1",
    "polars[pyarrow]>=1.34.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_tutorial"
registry_modules = [
    "dagster_tutorial.components.*",
]


